--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="redes">
            <ul>
             <li> <a href="https://wa.me/5592984944772" target="_blank">Whatsapp</a></li>
-            <li> <a href="www.linkedin.com/in/lourenço-braga-neto-05b548330" target="_blank">Linkedin</a></li>
+            <li> <a href="https://www.linkedin.com/in/louren%C3%A7o-braga-neto-05b548330/" target="_blank">Linkedin</a></li>
             <li> <a href="https://github.com/Lourenco-Braga" target="_blank">Github</a></li>
             <li> <a href="https://www.tiktok.com/@lourencoo.dev" target="_blank">Tiktok</a></li>
            </ul>
